fix spacing on index

--- a/contents/css/main.styl
+++ b/contents/css/main.styl
@@ -72,7 +72,7 @@ body, .wufoo
         margin 0 1em
 
 article
-  margin 2em 0
+  margin 0 0 2em
   h5
     color gray
 
